--- a/Projeto-Fullstack/front-end/.eslintrc.json
+++ b/Projeto-Fullstack/front-end/.eslintrc.json
@@ -6,7 +6,8 @@
     "extends": [
         "standard",
         "plugin:react/recommended",
-        "plugin:react-hooks/recommended"
+        "plugin:react-hooks/recommended",
+        "plugin:prettier/recommended"
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
@@ -15,7 +16,8 @@
     "plugins": [
         "react",
         "eslint-plugin-import-helpers",
-        "react-hooks"
+        "react-hooks",
+        "prettier"
     ],
     "rules": {
         "import-helpers/order-imports": [
@@ -38,6 +40,10 @@
             }
         ],
         "react-hooks/rules-of-hooks": "error",
-        "react-hooks/exhaustive-deps": "warn"
+        "react-hooks/exhaustive-deps": "warn",
+        "prettier/prettier": "error",
+        // Configurações do prettier
+        "arrowParens": "avoid", // Prettier deixa de colocar parênteses quando uma arrow function têm apenas um parâmetro
+        "trailingComma": "none" //  Prettier deixa de colocar virgula no último item
     }
 }
