--- a/React/projeto/package.json
+++ b/React/projeto/package.json
@@ -14,6 +14,9 @@
     "styled-components": "^5.3.8",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^1.0.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
