--- a/Projeto-Fullstack/front-end/package.json
+++ b/Projeto-Fullstack/front-end/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.45.0",
     "react-router-dom": "5",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.0.7",
     "web-vitals": "^2.1.4",
