--- a/TypeScript/aulas/package.json
+++ b/TypeScript/aulas/package.json
@@ -4,7 +4,8 @@
   "description": "Studing TypeScript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsx"
   },
   "keywords": [],
   "author": "João Vitor Ribeiro",
@@ -12,6 +13,7 @@
   "url": "https://github.com/JoaoVtRibeiro",
   "license": "ISC",
   "devDependencies": {
+    "tsx": "^3.14.0",
     "typescript": "^5.2.2"
   }
 }
