--- a/TypeScript/aulas/package.json
+++ b/TypeScript/aulas/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsx"
+    "start": "tsx"
   },
   "keywords": [],
   "author": "João Vitor Ribeiro",
