--- a/TypeScript/projeto/package.json
+++ b/TypeScript/projeto/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
+    "eslint": "^8.54.0",
+    "eslint-config-standard": "^17.1.0",
     "typescript": "^5.3.2"
   },
   "dependencies": {
