--- a/TypeScript/projeto/package.json
+++ b/TypeScript/projeto/package.json
@@ -4,7 +4,7 @@
   "description": "DevBills",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint ./ --fix"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-prettier": "^5.0.1",
     "prettier": "^3.1.0",
     "typescript": "^5.3.2"
@@ -24,3 +25,5 @@
     "express": "^4.18.2"
   }
 }
+
+
