--- a/TypeScript/projeto/package.json
+++ b/TypeScript/projeto/package.json
@@ -4,7 +4,8 @@
   "description": "DevBills",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint ./ --fix"
+    "lint": "eslint ./ --fix",
+    "dev": "tsx watch ./src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -19,11 +20,10 @@
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-prettier": "^5.0.1",
     "prettier": "^3.1.0",
+    "tsx": "^4.6.1",
     "typescript": "^5.3.2"
   },
   "dependencies": {
     "express": "^4.18.2"
   }
 }
-
-
