--- a/TypeScript/projeto/package.json
+++ b/TypeScript/projeto/package.json
@@ -1,14 +1,18 @@
 {
   "name": "projeto",
   "version": "1.0.0",
-  "description": "DevBills",
+  "description": "DevBills API - Aplicação de gerenciamento financeiro",
   "main": "index.js",
   "scripts": {
     "lint": "eslint ./ --fix",
     "dev": "tsx watch ./src/server.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": {
+    "name": "João Vitor Ribeiro",
+    "email": "joaoribeiro.cpu@gmail.com",
+    "url": "https://github.com/JoaoVtRibeiro"
+  },
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
