TypeScript Projeto - Url do banco no arquivo .env

--- a/TypeScript/projeto/.env
+++ b/TypeScript/projeto/.env
@@ -1,1 +1,1 @@
-MONGO_URL="" # url do banco  
+MONGO_URL="mongodb://devbills:pass123@localhost:27017/devbills?authMechanism=DEFAULT" # url do banco  
