--- a/TypeScript/projeto/package.json
+++ b/TypeScript/projeto/package.json
@@ -29,6 +29,7 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
+    "docker-compose": "^0.24.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
